@@ -1,5 +1,9 @@
 package cgeo.calendar;
 
+import cgeo.geocaching.utils.Log;
+
+import org.apache.commons.lang3.CharEncoding;
+
 import android.net.Uri;
 import android.text.Html;
 import android.text.Spanned;
@@ -35,6 +39,7 @@ class CalendarEntry {
             try {
                 this.startTimeMinutes = Integer.valueOf(startTime);
             } catch (NumberFormatException e) {
+                Log.e("CalendarEntry creation", e);
             }
         }
     }
@@ -45,14 +50,15 @@ class CalendarEntry {
             if (param == null) {
                 return "";
             }
-            return URLDecoder.decode(param, "UTF-8").trim();
+            return URLDecoder.decode(param, CharEncoding.UTF_8).trim();
         } catch (UnsupportedEncodingException e) {
+            Log.e("CalendarEntry.getParameter", e);
         }
         return "";
     }
 
     public boolean isValid() {
-        return (getName().length() > 0 && getHiddenDate().length() > 0);
+        return getName().length() > 0 && getHiddenDate().length() > 0;
     }
 
     public String getHiddenDate() {
